--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^19.1.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "gsap": "^3.12.7",
     "multer": "^1.4.5-lts.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
