--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "gsap": "^3.12.7",
+    "konva": "^9.3.20",
     "lottie-react": "^2.4.1",
     "multer": "^1.4.5-lts.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.5.2",
+    "react-konva": "^19.0.3",
+    "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
